--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,21 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/turprokat?serverTimezone=Europe/Kiev
-spring.datasource.username=turprokat
-spring.datasource.password=easier210684
+spring.datasource.url=jdbc:mysql://localhost:3306/posol?serverTimezone=Europe/Kiev
+spring.datasource.username=root
+spring.datasource.password=
+
+
+spring.mustache.expose-request-attributes=true
+
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+
+server.port=8080
+
+
+
+spring.mail.host=smtp.ukr.net
+spring.mail.username=testviza@ukr.net
+spring.mail.password=password2018
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
