--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/posol?serverTimezone=Europe/Kiev
-spring.datasource.username=root
-spring.datasource.password=
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3306/posol?serverTimezone=Europe/Kiev
+#spring.datasource.username=root
+#spring.datasource.password=
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://pora.mysql.tools:3306/pora_viza?verifyServerCertificate=false&useSSL=false&requireSSL=false
+spring.datasource.username=pora_viza
+spring.datasource.password=+S4p;0rM1l
+
+spring.jpa.open-in-view=true
 
 spring.mustache.expose-request-attributes=true
 
