sent email success

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.mail.port=2525
 spring.mail.protocol=smtp
 spring.mail.debug=true
 
-#spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.auth=true
 
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.starttls.required=true
