send all letters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@
 #spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://pora.mysql.tools:3306/pora_viza?verifyServerCertificate=false&useSSL=false&requireSSL=false
 spring.datasource.username=pora_viza
 spring.datasource.password=+S4p;0rM1l
@@ -22,15 +23,17 @@ server.port=8080
 
 
 
-spring.mail.host=mail.adm.tools
-#spring.mail.properties.mail.smtp.ssl.trust = mail.adm.tools
-spring.mail.username=free@borch.top
-spring.mail.password=so2SV3Yh1A8y
-spring.mail.port=2525
-spring.mail.protocol=smtp
-spring.mail.debug=true
-
-spring.mail.properties.mail.smtp.auth=true
+#spring.mail.host=mail.adm.tools
+##spring.mail.properties.mail.smtp.ssl.trust = mail.adm.tools
+#spring.mail.username=free@borch.top
+##spring.mail.vizacenter=zamkarta_lvov@mzv.cz
+##spring.mail.vizacenter-test=easier@ukr.net
+#spring.mail.password=so2SV3Yh1A8y
+#spring.mail.port=2525
+#spring.mail.protocol=smtp
+#spring.mail.debug=true
+#
+#spring.mail.properties.mail.smtp.auth=true
 
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.starttls.required=true
