--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,14 @@ spring.jpa.show-sql=true
 server.port=8080
 
 
+spring.viza.files.folder    =C:/viza/
+spring.viza.code            =CODE_HERE
+#spring.viza.emailTo        =zamkarta_lvov@mzv.cz
+spring.viza.emailTo         =easier@ukr.net
+spring.viza.emailToCopyBcc  =shop@mandrivnyk.kiev.ua
+spring.viza.host            =smtp.gmail.com
+spring.viza.port            =587
+
 
 
 
