added input for code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ server.port=8080
 
 
 spring.viza.files.folder    =C:/viza/
-spring.viza.code            =CODE_HERE
+#spring.viza.code            =CODE_HERE
 #spring.viza.emailTo        =zamkarta_lvov@mzv.cz
 spring.viza.emailTo         =easier@ukr.net
 spring.viza.emailToCopyBcc  =shop@mandrivnyk.kiev.ua
