Start JAR->SMTP ))

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,12 +20,14 @@ server.port=8080
 
 
 spring.viza.files.folder    =C:/viza/
-spring.viza.code            =CWGPUQK9
-#spring.viza.emailTo        =zamkarta_lvov@mzv.cz
-spring.viza.emailTo         =easier@ukr.net
-spring.viza.emailToCopyBcc  =shop@mandrivnyk.kiev.ua
-spring.viza.host            =smtp.gmail.com
-spring.viza.port            =587
+spring.viza.code            =DE7PPL2S
+spring.viza.emailTo        =zamkarta_lvov@mzv.cz
+#spring.viza.emailTo         =easier@ukr.net
+spring.viza.emailToCopyBcc  =studio@borch.top
+#spring.viza.host            =smtp.gmail.com
+spring.viza.host            =213.175.34.248
+#spring.viza.port            =587
+spring.viza.port            =25
 
 
 
@@ -39,9 +41,9 @@ spring.viza.port            =587
 #spring.mail.password=so2SV3Yh1A8y
 #spring.mail.port=2525
 #spring.mail.protocol=smtp
-#spring.mail.debug=true
+spring.mail.debug=true
 #
-#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.auth=false
 
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.starttls.required=true
